fix footer on mobile view

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -494,6 +494,45 @@ footer h1 {
 		font-size: 30px;
 		text-align: center;
 	}
+	#home-d1>div:last-child {
+		height: unset;
+		padding-bottom: 100px;
+	}
+	#home-d1>div:first-child {
+		border-bottom: transparent;
+	}
+	p {
+		text-align: center;
+	}
+	#home-d2 {
+		display: none;
+	}
+	#home-d3 {
+		padding-top: 0;
+	}
+	.arrow-down {
+	    width: 0px;
+		height: 0px;
+		border-left: 30px solid transparent;
+		border-right: 30px solid transparent;
+		border-top: 30px solid #fff;
+		position: absolute;
+		top: 0;
+		right: calc(50% - 30px);
+	}
+	.bottom-row {
+		display: none;
+	}
+	footer #logo {
+		display: block;
+		margin: 0 auto;
+	}
+	#hd3-footer input {
+		margin-bottom: 15px;
+	}
+	#hd3-footer h1 {
+		font-size: 35px;
+	}
 }
 
 @media screen and (max-width: 667px) {
